--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </nav>
     </header>
 
+    
     <section style="background-image: url('tesla/model-3.jpg')">
         <div class="content">
             <h1>Model 3</h1>
@@ -50,12 +51,14 @@
             <h1>Model Y</h1>
             <h2>From $29,740*</h2>
             <p>After Federal Tax Credit & Est. Gas Savings</p>
-            <div class="buttons">
-                <a href="">Order Now</a>
-                <a href="">Demo Drive</a>
+            <div class="content-buttons">
+                <div class="buttons">
+                    <a href="">Order Now</a>
+                    <a href="">Demo Drive</a>
+                </div>
+                <p>*Price before incentives and savings is $40,240, excluding taxes and fees. Subject to change.</p>
+                <p>Learn about est. gas savings.</p>
             </div>
-            <p>*Price before incentives and savings is $40,240, excluding taxes and fees. Subject to change.</p>
-            <p>Learn about est. gas savings.</p>
         </div>
     </section>
     <section style="background-image: url('tesla/model-s.jpg')">
