--- a/index.html
+++ b/index.html
@@ -32,18 +32,30 @@
         </nav>
     </header>
 
+    <aside>
+        <button class="tds-modal-close tds-icon-btn tds-icon-btn--medium"><svg class="tds-icon tds-icon-close tds-modal-close-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M18.53 17.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.748.748 0 0 1-1.06 0 .75.75 0 0 1 0-1.06L10.94 12 5.47 6.53a.75.75 0 1 1 1.06-1.06L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47z"></path></svg></button>
+        <a href="">Vehicles</a>
+        <a href="">Energy</a>
+        <a href="">Charging</a>
+        <a href="">Discover</a>
+        <a href="">Shop</a>
+        <a href="">Support</a>
+    </aside>
+
     
     <section style="background-image: url('tesla/model-3.jpg')">
         <div class="content">
             <h1>Model 3</h1>
             <h2>From $29,740*</h2>
             <p>After Federal Tax Credit & Est. Gas Savings</p>
-            <div class="buttons">
-                <a href="">Order Now</a>
-                <a href="">Demo Drive</a>
+            <div class="content-buttons">
+                <div class="buttons">
+                    <a href="">Order Now</a>
+                    <a href="">Demo Drive</a>
+                </div>
+                <p>*Price before incentives and savings is $40,240, excluding taxes and fees. Subject to change.</p>
+                <p>Learn about est. gas savings.</p>
             </div>
-            <p>*Price before incentives and savings is $40,240, excluding taxes and fees. Subject to change.</p>
-            <p>Learn about est. gas savings.</p>
         </div>
     </section>
     <section style="background-image: url('tesla/model-y.jpg')">
